# EUROBOT_2025_pico_elevator

./: .gitignore  CMakeLists.txt  NOTICE  main.cpp
.github/workflows/: ci.yml
external_lib/: CMakeLists.txt
external_lib/SCServo/: ArduinoFunctions.cpp  ArduinoFunctions.h  CMakeLists.txt  HardwareSerial.cpp  HardwareSerial.h  SCSerial.cpp  SCSerial.h  SCServo.h
external_lib/myutils/: CMakeLists.txt  myscanf.cpp  myutils.h
external_lib/pico_uart_transports/: CMakeLists.txt  pico_uart_transports.h
external_lib/servo/: CMakeLists.txt  servo.cpp  servo.h
external_lib/stepper/: CMakeLists.txt  stepper.cpp  stepper.h
external_lib/tft/: CMakeLists.txt  tft.cpp  tft.h
external_lib/tft/ST7735_TFT_lib/: CMakeLists.txt  ST7735_TFT.cpp  ST7735_TFT.hpp  ST7735_TFT_graphics.cpp  ST7735_TFT_graphics.hpp
external_lib/tribune_scripts/: CMakeLists.txt  tribune_scripts.cpp  tribune_scripts.h
